# RecallAI

./: .dockerignore  DOCKER.md  Dockerfile  Makefile  QUICKSTART.md  README.md  REQUIREMENTS.md  config.docker.yaml  config.yaml  docker-compose.yml  generate-docker-compose.py  main.py  pyproject.toml  setup.sh
benchmarks/: README.md  api_betchmark_results.md  latency_test.py
docs/: API.md  PROBLEMS_FACED.md  desings.md  faiss-limitations.md
docs/decisions/: ADR_001_vector_store_selection.md  ADR_002_embeddings_selection.md  ADR_003_embedding_models_selection.md  ADR_004_how_to_handle_code_files.md  ADR_005_re-indeing_stratergy_selection.md  ADR_006_FLAT_vs_HNSW.md  ADR_007_llm_model_selection.md
notebooks/: instruct_tuned_models.ipynb
recall_ai/: app.py
recall_ai/embeddings/: code_embedder.py  document_embedder.py  faiss_manager.py  metadata_store.py
recall_ai/gateway/: models.py  start_server.py
recall_ai/parsers/: chunker.py  code_parser.py  document_parser.py  notebook_parser.py
recall_ai/processing/: context_builder.py  file_processor.py  llm_client.py  search_processor.py
recall_ai/test1/: a.py
recall_ai/test2/: b.py
recall_ai/ui/: __init__.py  app.py
recall_ai/utils/: config.py  hash_utils.py  logger.py  scanner.py
scripts/: setup_models.py
